data/derived/comb/progs/unify/prog6962.ml.out
Characters 91-97:
  wwhile (funt b, b);;
          ^^^^^^
Error: This expression has type 'a * 'a
       but an expression was expected of type 'b -> 'b * bool
